Fix z-index of navbar and hero video container

--- a/profile-demo/src/Components/HeroVideo/HeroVideo.module.css
+++ b/profile-demo/src/Components/HeroVideo/HeroVideo.module.css
@@ -19,4 +19,5 @@
 
   position: sticky;
   top: 0;
+  z-index: 0;
 }
